welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: not found: value getColorSol
	if (getColorSol()=Color.green) {
            ^