welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	var vert:Boolean=false;
	avance()
	if (getColorSol()=Color.green) {
		avance()
	} else {
		gauche()
		avance()
	}
	return vert; 
    // Write your code here
}        
